--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -12,10 +12,9 @@
     - ansible_stdout_callback: yaml
 
   pre_tasks:
-    # - name: "wait 600 seconds for target connection to become reachable/usable."
-    #   wait_for_connection:
-    #     delay: 60
-    #     timeout: 120
+    - name: "wait 600 seconds for target connection to become reachable/usable."
+      wait_for_connection:
+        timeout: 600
 
     - name: "install python for Ansible."
       become: yes
