--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,8 +170,11 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update curl bash ansible tar gzip
-            pip install awscli
+            apk add curl
+            apk add --upgrade bash
+            apk add --update ansible
+            apk add openssh-client
+            pip3 install awscli
       - run:
           name: Configure server
           command: |
