--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,7 +170,6 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add curl
             apk add --upgrade bash
             apk add --update ansible
             apk add openssh-client
@@ -178,6 +177,7 @@ jobs:
       - run:
           name: Configure server
           command: |
+            export ANSIBLE_HOST_KEY_CHECKING=False
             cd .circleci/ansible
             cat inventory.txt
             ansible-playbook -i inventory.txt configure-server.yml
