--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -206,6 +206,7 @@ jobs:
       - run:
           name: Send migration results to kvdb
           command: |
+            cat ~/project/backend/migrations_dump.txt
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
               curl https://kvdb.io/FnC121WwCeiRoAWyNaFxhv/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
