--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -311,11 +311,11 @@ jobs:
           command: |
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
-            if curl -s https://${BACKEND_URL}:3030/api/status
+            if curl "${API_URL}/api/status" | grep "ok"
             then
-              return 1
+                return 0
             else
-              return 0
+                return 1
             fi
       - run:
           name: Frontend smoke test.
@@ -324,7 +324,7 @@ jobs:
             echo ${URL} 
             if curl -s ${URL} | grep "Welcome"
             then
-              return 1
+              return 0
             else
               return 1
             fi
