--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -293,6 +293,8 @@ jobs:
       - image: python:3.7-alpine3.11
     steps:
       - checkout
+      - attach_workspace:
+          at: /tmp/workspace
       - run:
           name: Install dependencies
           command: |
