--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,30 +1,30 @@
 - name: creates directory for backend
+  become: true
   file:
     path: ~/backend
     state: directory
 
 - name: unarchive artifact.tar.gz
+  become: true
   unarchive:
     src: artifact.tar.gz
     dest: ~/backend
 
-- name: npm install
-  command: npm install
-  args:
-    chdir: ~/backend
-
 - name: pm2 stop default
+  become: true
   command: pm2 stop default
   ignore_errors: yes
   args:
     chdir: ~/backend
 
 - name: pm2 start npm -- start
+  become: true
   command: pm2 start npm -- start
   args:
     chdir: ~/backend
 
 - name: pm2 start main.js
-  command: pm2 start main.js
+  become: true
+  command: pm2 start -f main.js
   args:
     chdir: ~/backend/dist
