--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -272,7 +272,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --upgrade bash ansible openssh-client nodejs npm
+            apk add --upgrade bash ansible openssh-client nodejs npm curl
             pip3 install awscli
       - run:
           name: Deploy backend
