--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -25,6 +25,8 @@
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
+    - NODE_ENV: "local"
+    - VERSION: "1"
     - ENVIRONMENT: "production"
     - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
     - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
