--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -14,7 +14,18 @@
     name: ["nodejs", "npm"]
     state: latest
     update_cache: yes
-    
+
+- name: "install n"
+  become: yes
+  npm:
+    name: n
+    global: yes
+    production: yes
+
+- name: "install nodejs 12.20.1"
+  become: yes
+  shell: n 12.20.1
+
 - name: "install pm2"
   become: true
   npm:
