--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -8,31 +8,18 @@
     src: artifact.tar.gz
     dest: ~/backend
 
-# - name: npm install
-#   command: npm install
-#   args:
-#     chdir: ~/backend
+- name: npm install
+  command: npm install
+  args:
+    chdir: ~/backend
 
-# - name: npm build
-#   command: npm run build
-#   args:
-#     chdir: ~/backend
+- name: pm2 start npm -- start
+  command: pm2 start npm -- start
+  args:
+    chdir: ~/backend
 
 - name: pm2 start -f ./main.js
-  # become: true
   command: pm2 start -f ./main.js
+  ignore_errors: yes
   args:
     chdir: ~/backend/dist
-  environment:
-    NODE_ENV: "local"
-    VERSION: "1"
-    ENVIRONMENT: production
-    TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
-    TYPEORM_MIGRATIONS_DIR: "./migrations"
-    TYPEORM_MIGRATIONS: "./migrations/*.js"
-    TYPEORM_ENTITIES: "./modules/domain/**/*.entity.js"
-    TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
-    TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
-    TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
-    TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
-    TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
