--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -301,6 +301,7 @@ jobs:
           command: |
             apk add --upgrade bash nodejs npm curl
             pip3 install awscli
+      - run: sleep 60
       - run:
           name: Backend smoke test.
           command: |
@@ -315,8 +316,7 @@ jobs:
             then
               return 0
             else
-              return 0
-              # return 1
+              return 1
             fi
       - run:
           name: Frontend smoke test.
