--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -350,12 +350,9 @@ jobs:
           name: Get old stack workflow id & remove old stacks and files
           command: |
             # Fetch the Old workflow ID
-            export FullOldWorkflowID=$(aws cloudformation \
+            export OldWorkflowID=$(aws cloudformation \
                     list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
                     --no-paginate --output text)
-            echo FullOldWorkflowID: "${FullOldWorkflowID}"
-            IFS=- read var1 OldWorkflowID \<<< "$FullOldWorkflowID"
-            export OldWorkflowID="$OldWorkflowID"
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
             # Fetch the stack names          
