--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -25,6 +25,10 @@ Resources:
           FromPort: 9100
           ToPort: 9100
           CidrIp: 0.0.0.0/0
+  MyEIP:
+    Type: AWS::EC2::EIP
+    Properties:
+      InstanceId: !Ref EC2Instance
 
   EC2Instance:
     Type: AWS::EC2::Instance
